--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -62,14 +62,21 @@
     .bulk-actions{'data-target-count' => 0}
       .bulk-actions-intro
         Manage items in bulk! Select an item by clicking its thumbnail.
-      %form.bulk-actions-form
+      .bulk-actions-form
         .bulk-actions-target-desc
           %span.bulk-actions-target-desc-singular
-            With the 1 selected item
+            With the 1 selected item:
           %span.bulk-actions-target-desc-plural
             With the
             %span.bulk-actions-target-count 0
-            selected items
+            selected items:
+        %ul.bulk-actions-options
+          %li
+            %form
+              = select_tag 'destination', options_for_select(destination_options)
+              %button Move
+          %li
+            %button Remove all
   - [true, false].each do |owned|
     .closet-hangers-group{'data-owned' => owned.to_s, :id => "closet-hangers-group-#{owned}"}
       %header
