--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -56,27 +56,29 @@
     = link_to t('.import_from.neopets_user'), new_neopets_user_path
     = link_to t('.export_to.petpage'), petpage_user_closet_hangers_path(@user)
 
-#closet-hangers{:class => public_perspective? ? nil : 'current-user'}
-  - unless public_perspective?
-    -# TODO: i18n
-    .bulk-actions{'data-target-count' => 0}
-      .bulk-actions-intro
-        Manage items in bulk! Select an item by clicking its thumbnail.
-      .bulk-actions-form
-        .bulk-actions-target-desc
-          %span.bulk-actions-target-desc-singular
-            With the 1 selected item:
-          %span.bulk-actions-target-desc-plural
-            With the
-            %span.bulk-actions-target-count 0
-            selected items:
-        %ul.bulk-actions-options
-          %li
-            %form
-              = select_tag 'destination', options_for_select(destination_options)
-              %button Move
-          %li
+- unless public_perspective?
+  -# TODO: i18n
+  .bulk-actions{'data-target-count' => 0}
+    .bulk-actions-intro
+      Manage items in bulk! Select an item by clicking its thumbnail.
+    .bulk-actions-form
+      .bulk-actions-target-desc
+        %span.bulk-actions-target-desc-singular
+          With the 1 selected item:
+        %span.bulk-actions-target-desc-plural
+          With the
+          %span.bulk-actions-target-count 0
+          selected items:
+      %ul.bulk-actions-options
+        %li
+          = form_tag user_closet_hangers_path(@user), method: :put, class: 'bulk-actions-move-all' do
+            = select_tag 'list_id', options_for_select(destination_options)
+            %button Move
+        %li
+          = form_tag user_closet_hangers_path(@user), method: :delete, class: 'bulk-actions-remove-all' do
             %button Remove all
+
+#closet-hangers{:class => public_perspective? ? nil : 'current-user'}
   - [true, false].each do |owned|
     .closet-hangers-group{'data-owned' => owned.to_s, :id => "closet-hangers-group-#{owned}"}
       %header
