hint at the select all button

--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -60,7 +60,8 @@
   -# TODO: i18n
   .bulk-actions{'data-target-count' => 0}
     .bulk-actions-intro
-      Manage items in bulk! Select an item by clicking its thumbnail.
+      Manage items in bulk! Select an item by clicking its thumbnail, or choose
+      a list and Select All.
     .bulk-actions-form
       .bulk-actions-target-desc
         %span.bulk-actions-target-desc-singular
