--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -155,4 +155,4 @@
 - content_for :javascripts do
   = include_javascript_libraries :jquery, :jquery_tmpl
   = javascript_include_tag 'ajax_auth', 'jquery.ui', 'jquery.jgrowl',
-    'placeholder', 'closet_hangers/index'
+    'placeholder', 'stickUp.min', 'closet_hangers/index'
