news posts read from the database, with a campaign-supplement classname option :)

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -119,10 +119,13 @@ ul.buttons
   #locale-form
     float: right
 
-.success, .alert, .warning
+=flash
   margin-bottom: 1em
   padding: .25em .5em
   text-align: center
+
+.success, .alert, .warning
+  +flash
 
 .success
   +notice
