--- a/app/assets/stylesheets/partials/_campaign-progress.sass
+++ b/app/assets/stylesheets/partials/_campaign-progress.sass
@@ -1,5 +1,7 @@
 $campaign-border-color: #006
 $campaign-background-color: #eef
+$campaign-text-color: #004
+$campaign-link-color: $campaign-text-color + #222
 
 =campaign-progress
   .campaign-progress-wrapper
