whoops, fix typo in donation fine print

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -80,8 +80,7 @@
     We love them very much and want to bring attention to their awesomeness.
     However, there are a few important bits of legal whatnot to keep in mind.
     (Mostly, it's the list of things that we expect to do but in no legally
-    binding way promise to do. Just in case
-    #{image_tag 'emoticons/tongue.gif'}
+    binding way promise to do. Just in case #{image_tag 'emoticons/tongue.gif'})
 
     Featuring your outfit is a thank-you gift that we like to give our donors;
     it is *not* a purchased service. We make no guarantee that we'll post your
