improved donation campaign nav

--- a/app/assets/stylesheets/campaigns/_show.sass
+++ b/app/assets/stylesheets/campaigns/_show.sass
@@ -143,6 +143,15 @@ body.campaigns-show, body.campaigns-current
     margin-top: 1em
     text-align: center
 
+  #outfits-header > *
+    display: inline-block
+
+  #all-campaigns-list
+    li
+      display: inline-block
+      list-style: none
+      margin-left: 1em
+
   #fine-print
     font-size: 85%
     margin-top: 2em
