--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -13,18 +13,45 @@
   = hidden_field_tag 'donation[stripe_token]'
   = hidden_field_tag 'donation[stripe_token_type]'
   = hidden_field_tag 'donation[donor_email]'
+  = hidden_field_tag 'donation[amount]'
   %header
+    -# I'm hardcoding the messaging this year, because I'm abandoning the UI
+    -# of giant paragraphs, and I don't feel like figuring out how this new
+    -# design generalizes just yet :P Whatever.
     %p#donation-form-title
       Thanks for supporting Dress to Impress!
-    %p#donation-form-subtitle
-      Securely powered by #{link_to 'Stripe', 'https://stripe.com/'}.
-      We never, ever see your payment info.
-      %br
-      All donations go directly to our hosting costs. Thanks for your help!
-  %div
-    = precede '$' do
-      = text_field_tag 'donation[amount]', '10.00'
-    %button{:type => 'submit'} Donate now!
+    %p
+      From modeling to servers, Dress to Impress is a community effort.
+      This year, we need to raise $720 to cover our 2016 hosting costs.
+    %p
+      As a thank-you gift, for every $5 you give, we'll feature one of your
+      outfits here and on the homepage. Last year's outfits were pretty great—will this year's be even better? :o
+    %p
+      All donations are securely powered by
+      #{link_to 'Stripe', 'https://stripe.com/'}, and go directly toward our
+      hosting costs. Thank you for your help!
+  #donation-fields
+    #amount-header Amount
+    #amount-choices
+      %li
+        %input#amount-5{type: 'radio', name: 'amount', value: '5.00'}
+        %label{for: 'amount-5'} $5
+      %li
+        %input#amount-10{type: 'radio', name: 'amount', value: '10.00'}
+        %label{for: 'amount-10'} $10
+      %li
+        %input#amount-30{type: 'radio', name: 'amount', value: '20.00', checked: true}
+        %label{for: 'amount-30'} $20
+      %li
+        %input#amount-50{type: 'radio', name: 'amount', value: '50.00'}
+        %label{for: 'amount-50'} $50
+      %li
+        %input#amount-custom{type: 'radio', name: 'amount', value: 'custom'}
+        %label{for: 'amount-custom'} Other
+        %label#amount-custom-fields{for: 'amount-custom-value'}
+          %input#amount-custom-value{type: 'text'}
+    #donation-controls
+      %button{type: 'submit'} Donate now!
 
 #campaign-text{'data-campaign-complete' => @campaign.complete?}
   - if @campaign.complete? && @campaign.thanks?
