Upgrade to Rails 6.1.7.4
This one was pretty straightforward yaay! Main thing was the change from `render file` to `render template` in a couple places, oh and a thing with complex `order()` clauses.

--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -11,5 +11,5 @@
     = text_field_tag :q, @query.to_s
     = submit_tag t('.search'), :name => nil
   = yield
-= render :file => 'layouts/application'
+= render template: 'layouts/application'
 
